--- a/ceosys-template/includes/_append.fragment-css.html
+++ b/ceosys-template/includes/_append.fragment-css.html
@@ -1,3 +1,3 @@
 <!-- Placeholder for child template CSS declarations -->
 <link href="{{site.data.info.assets}}assets/css/colors.css" rel="stylesheet"/>
-<link href="{{site.data.info.assets}}assets/css/napkon.css" rel="stylesheet"/>
+<link href="{{site.data.info.assets}}assets/css/ceosys.css" rel="stylesheet"/>
