--- a/ceosys-template/includes/fragment-header.html
+++ b/ceosys-template/includes/fragment-header.html
@@ -1,6 +1,6 @@
 <!-- Left logo - typically the publisher's logo - project or affiliate -->
 <div id="project-nav">
-  <a id="project-logo" no-external="true" href="https://napkon.de/">
+  <a id="project-logo" no-external="true" href="https://www.ceosys.de/">
     <img height="71" alt="Project home" src="{{site.data.info.assets}}assets/images/logo_ceosys.jpg" />
   </a>
 </div>
