updated images, added image map

--- a/ceosys-template/includes/fragment-footer.html
+++ b/ceosys-template/includes/fragment-footer.html
@@ -7,3 +7,8 @@
        <a rel="license" href="{{site.data.fhir.path}}license.html"><img style="border-style: none;" alt="CC-BY"
                      src="{{site.data.info.assets}}assets/images/cc-by.svg" height="17" /></a> |
 </p>
+
+<script type="text/javascript" src="{{site.data.info.assets}}assets/js/imageMapResizer.min.js"></script>
+<script type="text/javascript">
+       imageMapResize();
+</script>
